<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dimen_common_margin_extra"
    android:paddingLeft="@dimen/dimen_common_margin_extra"
    android:paddingRight="@dimen/dimen_common_margin_extra"
    android:paddingTop="@dimen/dimen_common_margin_extra"
    tools:context="com.arno.aboutmaterialdesign.textinput.TextInputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_card"
        android:orientation="vertical"
        android:padding="@dimen/dimen_common_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/activity_text_input_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_bilibili_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/activity_text_input_logo"
                android:layout_marginTop="@dimen/dimen_common_margin"
                android:text="@string/text_input_container_title"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/activity_text_input_editContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_common_margin_extra"
            android:layout_weight="5"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_textinput_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text_input_account"
                app:counterEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_text_input_edit_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_textinput_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_text_input_password"
                app:counterEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/activity_text_input_edit_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_common_margin"
                android:layout_marginBottom="@dimen/dimen_common_margin"
                >

                <Button
                    android:id="@+id/activity_text_input_btn_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_accent"
                    android:text="登陆"
                    android:textColor="@color/colorAccent" />

                <View
                    android:layout_width="@dimen/dimen_common_margin"
                    android:layout_height="0dp" />

                <Button
                    android:id="@+id/activity_text_input_btn_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_btn_accent"
                    android:text="注册"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
